Fix Win/Clang -Wsign-compare warning

enums are backed by signed integers by default on Windows, and Clang
(after r316268) would warn about comparing 'code', which is signed, with
sizeof(..) which is unsigned.

Bug: 777363
Change-Id: I4f69d92e9f770a1a9011dbd8b76ffaea1fadc469
Reviewed-on: https://chromium-review.googlesource.com/733225
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Hans Wennborg <hans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510842}
Former-commit-id: 7378f29a80837745d43076cb5b02a13587a72f30