third_party/expat/files/lib/xmlparse.c
@@ -2426,7 +2426,7 @@ XML_ErrorString(enum XML_Error code)
     XML_L("reserved prefix (xmlns) must not be declared or undeclared"),
     XML_L("prefix must not be bound to one of the reserved namespace names")
   };
-  if (code > 0 && code < sizeof(message)/sizeof(message[0]))
+  if (code > 0 && (size_t)code < sizeof(message)/sizeof(message[0]))
     return message[code];
   return NULL;
 }
